# cookiecutter-django-package

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  .python-version  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  noxfile.py
.github/workflows/: constraints.txt  docs.yml  pre-commit.yml  release-drafter.yml  tests.yml  update-instance.yml
docs/: conf.py  guide.md  index.md  quickstart.md  requirements.txt
hooks/: post_gen_project.py
tools/: dependencies-table.py
{{ cookiecutter.project_name }}/: CONTRIBUTING.md  README.md  docker-compose.yml  noxfile.py  pyproject.toml  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}
{{ cookiecutter.project_name }}/.github/workflows/: constraints.txt  release.yml  tests.yml
{{ cookiecutter.project_name }}/compose/django/: Dockerfile  entrypoint  start
{{ cookiecutter.project_name }}/compose/postgres/: Dockerfile
{{ cookiecutter.project_name }}/docs/: conf.py  requirements.txt  terminology.md
{{ cookiecutter.project_name }}/example_project/: settings.py  urls.py
{{ cookiecutter.project_name }}/example_project/core/: settings.py
{{ cookiecutter.project_name }}/example_project/example/: apps.py  tests.py
{{ cookiecutter.project_name }}/src/{{cookiecutter.package_name}}/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
{{ cookiecutter.project_name }}/tests/: conftest.py  settings.py  test_with_docker_compose_playwright.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/: .flake8  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  docker-compose.yml  manage.py  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  tests_docker.yml
{{cookiecutter.project_name}}/compose/django/: Dockerfile
{{cookiecutter.project_name}}/docs/: conf.py  index.md  reference.md  usage.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: admin.py  models.py  urls.py
{{cookiecutter.project_name}}/tests/: conftest.py
